fix: Reduce vertical spacing for About page mobile orbit

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -464,7 +464,7 @@
         /* absolute centering technique */
         left: 50% !important;
         margin-left: -250px !important;
-        margin-top: -60px !important;
+        margin-top: -90px !important;
         margin-bottom: -40px !important;
     }
 
